--- a/customize.yaml
+++ b/customize.yaml
@@ -7,11 +7,11 @@ light.bonus_room_overhead_2:
   icon: mdi:ceiling-light
 light.chair_lightstrip:
   icon: mdi:led-strip-variant
-light.dinning_room_overhead_1:
+light.dining_room_overhead_1:
   icon: mdi:ceiling-light
-light.dinning_room_overhead_2:
+light.dining_room_overhead_2:
   icon: mdi:ceiling-light
-light.dinning_room_overhead_3:
+light.dining_room_overhead_3:
   icon: mdi:ceiling-light
 light.ellens_lamp:
   icon: mdi:lamp
@@ -73,7 +73,7 @@ binary_sensor.bonus_room_right_window:
   device_class: window
 binary_sensor.bonus_room_small_window:
   device_class: window
-binary_sensor.dinning_room_window:
+binary_sensor.dining_room_window:
   device_class: window
 binary_sensor.guest_bedroom_left_window:
   device_class: window
