--- a/integrations/homekit.yaml
+++ b/integrations/homekit.yaml
@@ -4,6 +4,7 @@ filter:
     - cover.garage_door
     - cover.shop_door
     - fan.master_bedroom
+    - light.back_porch
     - light.bonus_room_overhead_1
     - light.bonus_room_overhead_2
     - light.bonus_room_nook
