--- a/automations/night_lights.yaml
+++ b/automations/night_lights.yaml
@@ -11,7 +11,7 @@
     - platform: sun
       event: sunrise
   action:
-    service: homeassistant.turn_off
+    service: homeassistant.turn_on
     entity_id: scene.sunrise
 
 - alias: "Turn on extra lights at sunset in vacation mode"
@@ -37,5 +37,5 @@
     entity_id: input_boolean.vacation_mode
     state: "on"
   action:
-    service: homeassistant.turn_off
+    service: homeassistant.turn_on
     entity_id: scene.sunrise_vacation
