--- a/automations/autolock.yaml
+++ b/automations/autolock.yaml
@@ -6,7 +6,7 @@
     - platform: state
       entity_id: binary_sensor.front_door_open
       to: 'off'
-  action: 
+  action:
     - service: timer.start
       entity_id: timer.front_door_lock
       data:
@@ -17,7 +17,7 @@
     - platform: state
       entity_id: binary_sensor.front_door_open
       to: 'on'
-  action: 
+  action:
     - service: timer.pause
       entity_id: timer.front_door_lock
 
@@ -25,16 +25,16 @@
   trigger:
     - platform: state
       entity_id: lock.front_door
-      to: 'locked'
-  action: 
+      to: locked
+  action:
     - service: timer.cancel
       entity_id: timer.front_door_lock
 
 - alias: Front Door Autolock - Lock
-  trigger: 
+  trigger:
     - platform: event
       event_type: timer.finished
-      event_data: 
+      event_data:
         entity_id: timer.front_door_lock
   condition:
     condition: state
