Customize family icons

--- a/customize.yaml
+++ b/customize.yaml
@@ -105,3 +105,10 @@ binary_sensor.office_closet_door_left:
 
 binary_sensor.office_closet_door_right:
   device_class: door
+
+# People
+person.sam:
+  icon: mdi:human-male
+
+person.ellen:
+  icon: mdi:human-female
