Setup more Python things on CI

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -5,5 +5,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: python -m pip install --upgrade pip setuptools wheel yamllint
       - name: Lint
-        run: pip3 install setuptools && make lint
+        run: make lint
