--- a/groups.yaml
+++ b/groups.yaml
@@ -261,6 +261,9 @@ batteries:
     - sensor.master_bathroom_window_battery
     - sensor.master_bedroom_window_battery
     - sensor.office_window_battery
+    - sensor.office_closet_door_left_battery
+    - sensor.office_closet_door_right_battery
+    - sensor.hall_closet_door_battery
 
 garage_doors:
   icon: mdi:garage
