--- a/groups.yaml
+++ b/groups.yaml
@@ -245,25 +245,25 @@ window_sensors:
 
 batteries:
   entities:
-    - sensor.back_door_battery
+    - sensor.back_door_open_battery
     - sensor.bonus_room_left_window_battery
     - sensor.bonus_room_right_window_battery
     - sensor.bonus_room_small_window_battery
     - sensor.dining_room_window_battery
+    - sensor.entryway_motion_sensor_battery
     - sensor.guest_bedroom_left_window_battery
     - sensor.guest_bedroom_right_window_battery
+    - sensor.hall_closet_door_battery
     - sensor.kitchen_window_battery
     - sensor.laundry_window_battery
     - sensor.living_room_left_window_battery
     - sensor.living_room_right_window_battery
     - sensor.master_bathroom_window_battery
     - sensor.master_bedroom_window_battery
-    - sensor.office_window_battery
+    - sensor.mini_button_battery
     - sensor.office_closet_door_left_battery
     - sensor.office_closet_door_right_battery
-    - sensor.hall_closet_door_battery
-    - sensor.motion_sensor_battery
-    - sensor.mini_button_battery
+    - sensor.office_window_battery
 
 garage_doors:
   icon: mdi:garage
