--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,6 +8,8 @@ homeassistant:
   customize: !include customize.yaml
 
 http:
+  ssl_certificate: ssl/fullchain.pem
+  ssl_key: ssl/privkey.pem
 frontend:
   themes: !include_dir_merge_named themes
 lovelace:
