--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -4,6 +4,7 @@ home_longitude: 0
 home_elevation: 0
 
 base_url: http://home.example.com
+appdaemon_url: http://home.example.com:5050
 
 august_username: "+15025550123"
 august_password: secret
