Add UniFi Protect fake secrets

--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -26,3 +26,6 @@ mysql_url: mysql://hass:ffffffffffffffffffffffffffffffffffff@core-mariadb/homeas
 
 myq_username: sam@example.com
 myq_password: secret
+
+unifi_protect_username: sam
+unifi_protect_password: secret
