--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -29,3 +29,5 @@ myq_password: secret
 
 unifi_protect_username: sam
 unifi_protect_password: secret
+
+octoprint_api_key: ffffffffffffffffffffffffffffffff
