--- a/integrations/binary_sensor.yaml
+++ b/integrations/binary_sensor.yaml
@@ -8,3 +8,7 @@
         - binary_sensor.office_closet_door_right
       value_template: >-
         {{ is_state("binary_sensor.office_closet_door_left", "on") or is_state("binary_sensor.office_closet_door_right", "on") }}
+
+- platform: workday
+  country: US
+  province: CA
