--- a/secrets_ci.yaml
+++ b/secrets_ci.yaml
@@ -30,4 +30,5 @@ myq_password: secret
 unifi_protect_username: sam
 unifi_protect_password: secret
 
+octoprint_host: 127.0.0.1
 octoprint_api_key: ffffffffffffffffffffffffffffffff
